# csapp-emulator

./: .gitignore  CMakeLists.txt  README.md
add/: add  add.c  add.txt  add1  check.txt
got/: main  main.c  main.out  main2.out  main4.out  so.c
linker/: sum.elf.txt
src/: main.c
src/algorithm/: hashtable.c  linkedlist.c
src/common/: convert.c  log.c  mytrie.c
src/cpu/: interrupt.c  isa.c  mesi.c  mmu.c  mmu.h  register.h  sram.c
src/disk/: code.c  elf.h
src/headers/: address.h  algorithm.h  allocator.h  cachetest.h  common.h  cpu.h  debug.h  interrupt.h  linker.h  log.h  memory.h  mmu.h  mytrie.h  process.h  trie.h
src/inst/: inst.c  inst.h
src/linker/: elf.c  linker.c  staticlink.c
src/malloc/: check.c  explicit_malloc.c  implicit_malloc.c  util.c
src/memory/: dram.c  dram.h  swap.c
src/process/: fork.c  pagefault.c  syscall.c  wmarea.c
src/test/: add.c  array.c  cache.c  falsesharing.c  fork.c  m_address.c  malloc_memory_test.c  malloc_memory_test2.c  stack.c  stack.s  sum.c  test.c  test_cache.c  test_context.c  test_fork.c  test_fork_func.c  test_linker.c  test_malloc.c  test_pagefault.c  test_vma.c
src/tools/: print.c  print.h
sum/: check.txt  sum  sum.c  sum.txt
test/: test  test.c
traces/: README.txt
